:recycle: [#333] add requested changes
